crates/uitest/fixtures/ty_check/method_bound/arg_bound.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/method_bound/arg_bound.fe
---
error[2-0004]: `Some` is ambiguous
   ┌─ arg_bound.fe:58:15
   │
18 │     Some(T),
   │     ---- candidate 2
   ·
58 │     let opt = Some(1)
   │               ^^^^ `Some` is ambiguous
   │
   ┌─ src/option.fe:9:5
   │
 9 │     Some(T),
   │     ---- candidate 1 (from prelude)

error[6-0003]: trait bound is not satisfied
   ┌─ arg_bound.fe:56:5
   │
56 │     extract(s)
   │     ^^^^^^^ `S` doesn't implement `Extract`

error[8-0031]: type annotation is needed
   ┌─ arg_bound.fe:59:5
   │
59 │     extract(opt)
   │     ^^^^^^^
   │     │
   │     type annotation is needed
   │     consider giving `: fn extract<_, i32>` here
